4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

server/pets.c: Always mark inventory objects as FLAG_NO_DROP, not only
 objects created from randomitems attribute and having nrof=0.
Andreas Kirschbaum 2007-09-16

Add a message when explore mode is disabled. Add help file for this command.
 lib/Makefile.am
 server/c_misc.c
Added file:
 lib/help/explore
Nicolas Weeger 2007-09-16

Fix many objects getting applied with 'a' key.
 server/apply.c: use METHOD_OK for success, not 1.
Nicolas Weeger 2007-09-15

Fix player teleported on wrong HallOfSelection for race if dying before class selection.
 server/player.c
Nicolas Weeger 2007-09-15

Add an 'empty' command, that puts all contents of a (or all) container either
on ground or in player's opened container.
 include/sproto.h
 lib/Makefile.am
 server/c_object.c commands.c
Added file:
 lib/help/empty
Nicolas Weeger 2007-09-09

lib/metaserver2: Update with official metaserver2 location.  MSW 2007-08-31

Remove support for obsolete 'fly_on/fly_off/walk_on/walk_off' attributes.
--
doc/Developers/objects: Update documentation about no_pass attribute.
doc/{checkarch,collect}.pl.in: Check for move_on/off instead.
common/loader.l: Remove support for fly_on/fly_off/walk_on/walk_off
 attributes.
Andreas Kirschbaum 2007-08-25

Fix incorrect lookup_spell_by_name() that prevented eg marking runes to work.
 server/spell_util.c
Nicolas Weeger 2007-08-23

Fix mistake in check logic, preventing from building connected items.
 server/build_map.c
Nicolas Weeger 2007-08-23

Fix bug #1779574: can destroy outer walls in lone town apartment, level 2.
 server/build_map.c: fix can_build_over(), add missing check.
Nicolas Weeger 2007-08-23
